DL2 - Add comments for Logistic Regression

--- a/Báo Cáo Cuối Kỳ/Dữ liệu 2/DL2 - Logistic Regression.ipynb
+++ b/Báo Cáo Cuối Kỳ/Dữ liệu 2/DL2 - Logistic Regression.ipynb
@@ -107,7 +107,7 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "targetColName = 'kredit'"
+    "targetColName = 'kredit' # Tên cột dự đoán - target"
    ],
    "metadata": {
     "collapsed": false,
@@ -123,7 +123,7 @@
    "execution_count": 10,
    "outputs": [],
    "source": [
-    "df = df.dropna()"
+    "df = df.dropna() # Xóa các dòng có giá trị null"
    ],
    "metadata": {
     "collapsed": false,
@@ -139,7 +139,7 @@
    "execution_count": 11,
    "outputs": [],
    "source": [
-    "X = df.drop([targetColName], axis=1)"
+    "X = df.drop([targetColName], axis=1) # Xóa cột dự đoán để lấy dự liệu đầu vào - train data"
    ],
    "metadata": {
     "collapsed": false,
@@ -155,7 +155,7 @@
    "execution_count": 12,
    "outputs": [],
    "source": [
-    "y = df[targetColName] "
+    "y = df[targetColName]  # Lấy cột dự đoán - target"
    ],
    "metadata": {
     "collapsed": false,
@@ -171,7 +171,7 @@
    "execution_count": 13,
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123) # Chia dữ liệu thành 2 phần train và test"
    ],
    "metadata": {
     "collapsed": false,
@@ -229,10 +229,10 @@
    "outputs": [],
    "source": [
     "def test_all():\n",
-    "    model = LogisticRegression()\n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    return accuracy_score(y_test, y_pred)"
+    "    model = LogisticRegression() # Tạo model Logistic Regression\n",
+    "    model.fit(X_train, y_train) # Train model\n",
+    "    y_pred = model.predict(X_test) # Kiểm tra model - Dự đoán kết quả\n",
+    "    return accuracy_score(y_test, y_pred) # Tính độ chính xác"
    ],
    "metadata": {
     "collapsed": false,
